--- a/web/src/client/index.html
+++ b/web/src/client/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
   </head>
 
-  <body>
+  <body class="bg-light">
     <div id="app">ala</div>
     <script src="client.min.js"></script>
   </body>
